Fix misalignment of long names

--- a/otterwiki/static/css/partials/sidebar.css
+++ b/otterwiki/static/css/partials/sidebar.css
@@ -187,6 +187,7 @@ a.sidebar-toc-6 { padding-left: calc(7 * var(--spacing) - var(--radius) - 13px);
 .sidebar-menu .summary-details::before {
     width: 1.3rem;
     display: inline-block;
+    flex-shrink: 0;
     content: '';
 }
 
